Implemented modifications to Characters and minor pom fixes