@@ -30,4 +30,6 @@ public class Startup extends Application {
         primaryStage.setScene(scene);
         primaryStage.show();
     }
+
+    //--module-path D:\openjfx-18.0.1_windows-x64_bin-sdk\javafx-sdk-18.0.1\lib --add-modules javafx.controls,javafx.fxml
 }
